@@ -25,7 +25,6 @@ dir = script
 [Prereqs / RuntimeRequires]
 perl = 5.008
 HTML::Form = 6.08
-Scalar::Util = 1.14
 
 [Prereqs / TestRequires]
 HTTP::Daemon = 6.12
